# libcrunch

./: CMakeLists.txt  README.md
include/crunch/: bitstream.hpp  block.hpp  decode.hpp  decoder.hpp  dictionary.hpp  error.hpp  format.hpp  frame.hpp  fse.hpp  huffman.hpp  literals.hpp  sequences.hpp  xxhash.hpp
src/: decode.cpp  decoder.cpp  dictionary.cpp  frame.cpp  fse.cpp  huffman.cpp  literals.cpp  sequences.cpp
tests/: bitstream_tests.cpp  check.hpp  decode_tests.cpp  decoder_tests.cpp  dictionary_tests.cpp  frame_tests.cpp  fse_tests.cpp  huffman_tests.cpp  literals_tests.cpp  sequences_tests.cpp  xxhash_tests.cpp
tests/data/: hello.dict  hello.txt  hello.zst  hello_dict.zst  hello_piped.zst  random.zst  rle.zst  window.zst
